# radar-pokemon-brasil

./: .env.example  .gitignore  .replit  DEPLOY_REPLIT.md  README.md  pyproject.toml  radar.bat  radar.sh  requirements.txt
.streamlit/: config.toml
config/: blocked_domains.yml  card_aliases.yml  cards.yml  collection_aliases.yml  condition_terms.yml  domain_groups.yml  grading_terms.yml  keywords.yml  market_jargon.yml  negative_terms.yml  non_card_terms.yml  priority_domains.yml  query_templates.yml  rarity_terms.yml  search_profiles.yml  sources.yml  tcg_vocabulary.yml  template_performance.yml  watchlist.yml
data/: radar_results.csv
docs/: AUTOMATED_OPPORTUNITY_RADAR.md  VALIDACAO_DADOS_REAIS.md  future_connectors_meta.md
src/: __init__.py  __main__.py  card_detection.py  connector_health.py  database.py  doctor.py  exporters.py  freshness.py  health_adapters.py  incremental_radar.py  main.py  manual_import.py  market_intelligence.py  market_snapshot.py  models.py  normalizer.py  opportunity_db.py  opportunity_models.py  opportunity_quality.py  opportunity_reporting.py  opportunity_scanner.py  opportunity_scoring.py  paths.py  query_template_perf.py  reddit_auth.py  reddit_policy.py  reporting.py  scoring.py  search_budget.py  search_modes.py  search_profiles.py  setup_env.py  source_registry.py  tcg_knowledge.py  watchlist_loader.py  wishlist.py
tests/: test_card_detection.py  test_connector_health.py  test_dashboard_data.py  test_dashboard_webapp.py  test_data_mode.py  test_data_mode_report.py  test_doctor.py  test_health_adapters.py  test_manual_import.py  (+21 more)
(+17 files in other folders)
